--- a/programing_languages/Java/DSA_JAVA/ipynb_files/array_program.ipynb
+++ b/programing_languages/Java/DSA_JAVA/ipynb_files/array_program.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -1245,7 +1245,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "21.0.2+13-LTS-58"
+   "version": "17.0.9+9-Ubuntu-122.04"
   }
  },
  "nbformat": 4,
